# Yebudi

./: .env.example  .gitignore  README.md  docker-compose.yml
db/: README.md
db/migrations/: 0001_init.sql
web/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/(app)/: layout.tsx
web/app/(app)/forge/: page.tsx
web/app/(app)/pitch/: page.tsx
web/app/(app)/pulse/: page.tsx
web/components/app/: BigChart.tsx  DetailSheet.tsx  Dial.tsx  MetricTile.tsx  MockupApp.tsx  ModeTabs.tsx  PulseDashboard.tsx  Sparkline.tsx  TrendPanel.tsx  icons.tsx  mockup-runtime.js  mockup-shell.ts
web/components/readiness/: expandable-card.tsx  metric-cards.tsx  readiness-dashboard.tsx  readiness-ring.tsx
web/components/ui/: badge.tsx  card.tsx
web/lib/: detail-view.ts  forge-mockup.ts  format.ts  mock-data.ts  mockup-shared.ts  mockup.ts  pitch-mockup.ts  pulse-config.ts  pulse-mockup.ts  pulse-types.ts  types.ts
web/lib/db/: client.ts  schema.ts
web/lib/db/queries/: forge.ts  pitch.ts  pulse.ts
worker/: .dockerignore  Dockerfile  README.md  pyproject.toml
worker/src/ingest/: __init__.py  cli.py  config.py  domain.py  pipeline.py
worker/src/ingest/db/: __init__.py  curated.py  engine.py  raw.py  sync.py  upsert.py
worker/src/ingest/sources/: __init__.py  base.py  fake.py  garmin_mapping.py  garminconnect.py
worker/tests/: test_garmin_mapping.py
