[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garmin-ingest"
version = "0.1.0"
description = "Garmin wearable data ingestion worker (raw-first, idempotent upserts)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "garminconnect>=0.3.6", # curl_cffi-based SSO + stateful MFA (no garth); pulls curl_cffi/ua-generator
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
garmin-ingest = "ingest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
